--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,16 @@ dependencies:
   flutter_auth_buttons: ^0.8.0
   flutter_platform_widgets: ^0.41.0
   easy_localization: ^2.3.2
+  auto_size_text: ^2.1.0
+  responsive_grid: ^1.1.1
+  json_annotation: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.9.0
+  json_serializable: ^3.3.0
+  build_runner: ^1.10.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
