Improve auth flow, improve lang list ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   auto_size_text: ^2.1.0
   responsive_grid: ^1.1.1
   json_annotation: ^3.0.1
+  responsive_builder: ^0.2.0+2
+  tuple: ^1.0.3
 
 dev_dependencies:
   flutter_test:
