--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  firebase: ^7.3.0
   firebase_core: ^0.4.4+3
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
   firebase_analytics: ^5.0.11
+  firebase_storage: ^3.1.5
   google_sign_in: ^4.4.6
   provider: ^4.1.2
   flutter_auth_buttons: ^0.8.0
@@ -28,6 +30,9 @@ dependencies:
   tuple: ^1.0.3
   intro_slider: ^2.3.1
   flutter_icons: ^1.1.0
+  collection: ^1.14.12
+  flutter_sticky_header: ^0.4.2
+  sliver_fab: ^1.0.0
 
 dev_dependencies:
   flutter_test:
