--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_sticky_header: ^0.4.2
   sliver_fab: ^1.0.0
   expandable: ^4.1.4
+  card_settings: ^1.9.2
+  freezed_annotation: ^0.7.1
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +43,7 @@ dev_dependencies:
   pedantic: ^1.9.0
   json_serializable: ^3.3.0
   build_runner: ^1.10.0
+  freezed: ^0.10.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
