--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   expandable: ^4.1.4
   card_settings: ^1.9.2
   freezed_annotation: ^0.7.1
+  chewie: ^0.9.10
+  video_player: ^0.10.11+1
+  auto_orientation: ^1.0.6
 
 dev_dependencies:
   flutter_test:
