--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   chewie: ^0.9.10
   video_player: ^0.10.11+1
   auto_orientation: ^1.0.6
+  file_picker_cross: ^2.0.0
 
 dev_dependencies:
   flutter_test:
