--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   google_sign_in: ^4.4.6
   provider: ^4.1.2
   flutter_auth_buttons: ^0.8.0
-  flutter_platform_widgets: ^0.41.0
+  flutter_platform_widgets: ^0.50.0
   easy_localization: ^2.3.2
   auto_size_text: ^2.1.0
   responsive_grid: ^1.1.1
@@ -41,6 +41,8 @@ dependencies:
   auto_orientation: ^1.0.6
   file_picker_cross: ^2.0.0
   paginate_firestore: ^0.1.0
+  full_screen_image: ^1.0.2
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
