--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^0.4.4+3
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
+  cloud_functions: ^0.5.0
   firebase_analytics: ^5.0.11
   firebase_storage: ^3.1.5
   google_sign_in: ^4.4.6
@@ -45,6 +46,8 @@ dependencies:
   cached_network_image: ^2.2.0+1
   step_progress_indicator: ^0.2.3+6
   tinycolor: ^1.0.2
+  flutter_webview_plugin: ^0.3.11
+  url_launcher: ^5.4.10
 
 dev_dependencies:
   flutter_test:
