--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_functions: ^0.5.0
   firebase_analytics: ^5.0.11
   firebase_storage: ^3.1.5
+  firebase_messaging: ^6.0.16
   google_sign_in: ^4.4.6
   provider: ^4.1.2
   flutter_auth_buttons: ^0.8.0
@@ -35,7 +36,9 @@ dependencies:
   flutter_sticky_header: ^0.4.2
   sliver_fab: ^1.0.0
   expandable: ^4.1.4
-  card_settings: ^1.9.2
+  card_settings:
+    git:
+      url: git://github.com/CoolONEOfficial/card_settings.git
   freezed_annotation: ^0.7.1
   chewie: ^0.9.10
   video_player: ^0.10.11+1
