--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   cloud_functions: ^0.5.0
   firebase_analytics: ^5.0.11
   firebase_storage: ^3.1.5
-  firebase_messaging: ^6.0.16
   google_sign_in: ^4.4.6
   provider: ^4.1.2
   flutter_auth_buttons: ^0.8.0
@@ -51,6 +50,12 @@ dependencies:
   tinycolor: ^1.0.2
   flutter_webview_plugin: ^0.3.11
   url_launcher: ^5.4.10
+  onesignal_flutter: ^2.4.1
+  path_provider: ^1.6.9
+  timer_builder: ^1.3.0
+  audioplayers: ^0.15.1
+  record_mp3: ^2.0.0
+  permission_handler: ^5.0.0+hotfix.8
 
 dev_dependencies:
   flutter_test:
