--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>prolang</string>
+	<string>ProЯзыки</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -66,5 +66,8 @@
 	</dict>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Record audio for playback</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
+
 </dict>
 </plist>
