--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,18 @@ dev_dependencies:
   json_serializable: ^3.3.0
   build_runner: ^1.10.0
   freezed: ^0.10.9
+  flutter_launcher_icons: ^0.7.5
+  flutter_native_splash: ^0.1.9
+
+flutter_native_splash:
+  image: "assets/images/logo.png"
+  color: 7E57C2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path_ios: "assets/images/logo_ios.jpg"
+  image_path_android: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
