--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   audioplayers: ^0.15.1
   record_mp3: ^2.0.0
   permission_handler: ^5.0.0+hotfix.8
+  emojis: ^0.8.1
+  image: ^2.1.12
+  crop: ^0.3.1+1
 
 dev_dependencies:
   flutter_test:
