Improve app icon, add lang crud

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ flutter_icons:
   ios: true
   image_path_ios: "assets/images/logo_ios.jpg"
   image_path_android: "assets/images/logo.png"
+  adaptive_icon_background: "#7E57C2"
+  adaptive_icon_foreground: "assets/images/logo_android.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
