Add web icons, fix web release bugs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,11 +38,12 @@
             "request": "launch",
             "type": "dart",
             "deviceId": "chrome",
+            "flutterMode": "release",
             "args": [
                 "--web-hostname",
                 "localhost",
                 "--web-port",
-                "5000",
+                "5000"
             ]
         },
     ],
