--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,22 +1,22 @@
 {
-    "name": "prolang",
-    "short_name": "prolang",
+    "name": "ProЯзыки",
+    "short_name": "ProЯзыки",
     "start_url": ".",
+    "theme_color": "#7e57c2",
+    "background_color": "#7e57c2",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": ".",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
+            "src": "/android-chrome-384x384.png",
+            "sizes": "384x384",
             "type": "image/png"
         }
     ]
