--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   emojis: ^0.8.1
   image: ^2.1.12
   crop: ^0.3.1+1
+  email_validator: ^1.0.4
 
 dev_dependencies:
   flutter_test:
