--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,14 +1,14 @@
-buildscript {
-    repositories {
-        // ...
-        maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal
-    }
-    dependencies {
-        // ...
-        // OneSignal-Gradle-Plugin
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.6, 0.99.99]'
-    }
-}
+// buildscript {
+//     repositories {
+//         // ...
+//         maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal
+//     }
+//     dependencies {
+//         // ...
+//         // OneSignal-Gradle-Plugin
+//         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.6, 0.99.99]'
+//     }
+// }
 
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 
@@ -74,4 +74,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.firebase:firebase-iid:18.0.0'
 }
