--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   card_settings:
     git:
       url: git://github.com/CoolONEOfficial/card_settings.git
-  freezed_annotation: ^0.7.1
+  freezed_annotation: ^0.11.0
   chewie: ^0.9.10
+  chewie_audio: ^1.0.0+1
   video_player: ^0.10.11+1
   auto_orientation: ^1.0.6
   file_picker_cross: ^2.0.0
@@ -50,11 +51,11 @@ dependencies:
   tinycolor: ^1.0.2
   flutter_webview_plugin: ^0.3.11
   url_launcher: ^5.4.10
-  onesignal_flutter: ^2.4.1
+  onesignal_flutter: ^2.5.0
   path_provider: ^1.6.9
   timer_builder: ^1.3.0
   audioplayers: ^0.15.1
-  record_mp3: ^2.0.0
+  record_mp3: ^1.0.1
   permission_handler: ^5.0.0+hotfix.8
   emojis: ^0.8.1
   image: ^2.1.12
@@ -67,9 +68,10 @@ dev_dependencies:
   pedantic: ^1.9.0
   json_serializable: ^3.3.0
   build_runner: ^1.10.0
-  freezed: ^0.10.9
+  freezed: ^0.11.0
   flutter_launcher_icons: ^0.7.5
   flutter_native_splash: ^0.1.9
+  native_pdf_view: ^3.6.2
 
 flutter_native_splash:
   image: "assets/images/logo.png"
