--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   image: ^2.1.12
   crop: ^0.3.1+1
   email_validator: ^1.0.4
+  flutter_downloader: ^1.4.4
+  open_file: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -95,25 +97,22 @@ flutter:
   assets:
     - assets/translations/
     - assets/images/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: TTNorms
-      fonts:
-        - asset: assets/fonts/TTNorms-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/TTNorms-Regular.ttf
-          weight: 500
+  # fonts:
+  #   - family: TTNorms
+  #     fonts:
+  #       - asset: assets/fonts/TTNorms-Bold.ttf
+  #         weight: 700
+  #       - asset: assets/fonts/TTNorms-Regular.ttf
+  #         weight: 500
   # fonts:
   #   - family: Schyler
   #     fonts:
